finished content for about me page and updated some animations
finished the about me page by adding a my life divided section with a pie chart and some text. Also added a fun facts section to complete the page content

--- a/DeMarksWebsite/src/index.html
+++ b/DeMarksWebsite/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- 3 Tags below are for responsive design layout -->
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
 </head>
 <body>
   <app-root></app-root>
